--- a/MovieHouse_Welcome_Page.html
+++ b/MovieHouse_Welcome_Page.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Enechukwu Francis Chinonso">
-    <meta name="description" content="MovieHouse is Platform for Download Movies of all Kind,from all the world.">
+    <meta name="description" content="Are you looking for any movie? Download any kind of movie for free without stress and download as musch as you want.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MovieHouse - Download Any Movie With just One Click</title>
+    <title>Download Movies For Free With One Click - MovieHouse</title>
     <link rel="stylesheet" href="MovieHouse_Welcome_Page.css">
+   
 </head>
 <body>
    
@@ -40,31 +41,10 @@
 
 
  
-<div class="Searched-Movie display-none">
-   <table>
- <thead>
-    <tr>
-    <th>
-       Movie Picture 
-    </th>
-    <th>Name of Movie</th>
-    <th>Download </th>
-    </tr>
- </thead>
+<div class="Searched-Movie">
+   <table id="Table">
 
- <tbody>
-    <tr>
-    <td>
-       <img src="Newly Wedded couples .png" alt="">
-    </td>
-   <td>
-    Name of Movie
-   </td>
-   <td>
-    <button><a href="MovieHouse_Download_Page.html">Download</a></button>
-   </td>
-    </tr>
- </tbody>
+
    </table>
 </div>
 
@@ -117,8 +97,10 @@
 
 <article>
    <h3>About Us</h3>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci illo modi excepturi eveniet suscipit. Ducimus dolore odio quia atque enim officiis architecto ratione eos odit! Inventore voluptas iste deserunt aperiam.
-   Porro neque error, voluptate tione maxime eius tenetur sequi dolore laudantium blanditiis molestias laboriosam ipsum amet animi quisquam. Inventore, est.</p>
+   <p>Welcome to MovieHouse, your one-stop destination for all your movie cravings! At MovieHouse, we’ve made it incredibly easy for you to find and download any movie you want. Simply type the name of your desired movie in our search bar, and we’ll do the rest.  
+      Whether it’s an all-time classic, a trending blockbuster, or a hidden gem you’ve been dying to watch, our extensive library is here to deliver it all to you in just a few clicks.  
+      
+      Join us at MovieHouse, where your next great movie adventure begins! </p>
 </article>
     </main>
  <footer class="Contact-us">
