--- a/MovieHouse_Welcome_Page.html
+++ b/MovieHouse_Welcome_Page.html
@@ -98,9 +98,7 @@
 <article>
    <h3>About Us</h3>
    <p>Welcome to MovieHouse, your one-stop destination for all your movie cravings! At MovieHouse, we’ve made it incredibly easy for you to find and download any movie you want. Simply type the name of your desired movie in our search bar, and we’ll do the rest.  
-      Whether it’s an all-time classic, a trending blockbuster, or a hidden gem you’ve been dying to watch, our extensive library is here to deliver it all to you in just a few clicks.  
-      
-      Join us at MovieHouse, where your next great movie adventure begins! </p>
+      Whether it’s an all-time classic, a trending blockbuster, or a hidden gem you’ve been dying to watch, our extensive library is here to deliver it all to you in just a few clicks.   </p>
 </article>
     </main>
  <footer class="Contact-us">
