corrected some mistakes found while linking some files

--- a/html/MovieHouse_Welcome_Page.html
+++ b/html/MovieHouse_Welcome_Page.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Are you looking for any movie? Download any kind of movie for free without stress and download as musch as you want.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Download Movies For Free With One Click - MovieHouse</title>
-    <link rel="stylesheet" href="MovieHouse_Welcome_Page.css">
+    <link rel="stylesheet" href="../css/MovieHouse_Welcome_Page.css">
    
 </head>
 <body>
@@ -54,41 +54,41 @@
 <div class="list-of-movies"> 
    <div class="Movie-1">
       <a href="#">
-<img src="Newly Wedded couples .png" alt="" class="image-of-the-movie-1">
+<img src="../images/Newly Wedded couples .png" alt="" class="image-of-the-movie-1">
     <p class="movie-title"> Name of the movie</p>
    </a></div>
 
    <div class="Movie-2">
       <a href="#">
-<img src="Newly Wedded couples .png" alt="" class="image-of-the-movie-2">
+<img src="../images/Newly Wedded couples .png" alt="" class="image-of-the-movie-2">
 <p class="movie-title"> Name of the movie</p>
 
    </a></div>
 
    <div class="Movie-3">
       <a href="#">
- <img src="Newly Wedded couples .png" alt="" class="image-of-the-movie-3">
+ <img src="../images/Newly Wedded couples .png" alt="" class="image-of-the-movie-3">
  <p class="movie-title"> Name of the movie</p>
  
    </a></div>
  
    <div class="Movie-4">
       <a href="#">
-<img src="Newly Wedded couples .png" alt="" class="image-of-the-movie-4">
+<img src="../images/Newly Wedded couples .png" alt="" class="image-of-the-movie-4">
 <p class="movie-title"> Name of the movie</p>
 
    </a></div>
 
    <div class="Movie-5">
       <a href="#">
-<img src="Newly Wedded couples .png" alt="" class="image-of-the-movie-5">
+<img src="../images/Newly Wedded couples .png" alt="" class="image-of-the-movie-5">
 <p class="movie-title"> Name of the movie</p>
 
    </a></div>
 
    <div class="Movie-6">
       <a href="#">
-<img src="Newly Wedded couples .png" alt="" class="image-of-the-movie-6">
+<img src=" ../images/Newly Wedded couples .png" alt="" class="image-of-the-movie-6">
 <p class="movie-title"> Name of the movie</p>
 
    </a> 
