Correct some errors in linking again

--- a/html/MovieHouse_Download_Page.html
+++ b/html/MovieHouse_Download_Page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="author" content="Enechukwu Francis Chinonse">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="MovieHouse_Download_Page.css">
+    <link rel="stylesheet" href="../css/MovieHouse_Download_Page.css">
 
     <title>MovieHouse - Download Any Movie With just One Click </title>
 </head>
@@ -16,7 +16,7 @@
     </Header>
 
     <main>
-<img src="Newly Wedded couples .png" alt="">
+<img src="../images/Newly Wedded couples .png" alt="">
 <h2 class="Movie-Title">
     Lonely Planet
 </h2>
@@ -36,7 +36,7 @@
             <button class="Movie-Subtitle">Subtitle</button>
          </li> 
          <li>
-            <button class="Movie-Download-Button">Download</button>
+          <a href="www.google.com"> <button class="Movie-Download-Button"  Download="Movie Name">Download</button></a>  
          </li>
      
 
@@ -56,5 +56,5 @@
     </footer>
 
 </body>
-<script src="MovieHouse_Download_Page.js"></script>
+<script src="../js/MovieHouse_Download_Page.js"></script>
 </html>
