--- a/html/MovieHouse_Welcome_Page.html
+++ b/html/MovieHouse_Welcome_Page.html
@@ -113,5 +113,5 @@
    </ul>
  </footer>
 </body>
-<script src="MovieHouse_Welcome_Page.js"></script>
+<script src="../js/MovieHouse_Welcome_Page.js"></script>
 </html>
